syntax = "proto3";

option cc_generic_services = true;

import "google/protobuf/empty.proto";
import "service/DataService.proto";
package apb.api.config;

option java_package = "jp.co.apb.server.api.proto.config";
option java_multiple_files = true;
option csharp_namespace = "Art.Framework.ApiNetwork.Grpc.Api.Config";

message GetReviewServerConfigResponse {
  .apb.api.config.ApiConfig api = 1;
  .apb.api.config.OctoConfig octo = 2;
  .apb.api.config.WebViewConfig web_view = 3;
  .apb.api.config.MasterDataConfig master_data = 4;
  map<string, .apb.api.data.DiffData> diff_user_data = 99;
}

message ApiConfig {
  string hostname = 1;
  int32 port = 2;
}

message OctoConfig {
  int32 version = 1;
  int32 app_id = 2;
  string client_secret_key = 3;
  string aes_key = 4;
  string url = 5;
}

message WebViewConfig {
  string base_url = 1;
}

message MasterDataConfig {
  string url_format = 1;
}

service ConfigService {
  rpc GetReviewServerConfig(.google.protobuf.Empty) returns (.apb.api.config.GetReviewServerConfigResponse);
}

